fix(countbadge): tweak contrast color (#2620)
* fix(countbadge): tweak contrast color

* fix(countbadges): Create accesible red variable

--- a/src/components/count-badge/CountBadge.scss
+++ b/src/components/count-badge/CountBadge.scss
@@ -36,7 +36,7 @@ $bdl-CountBadge-background: $bdl-watermelon-red;
     font-size: 11px;
     line-height: 16px;
     text-align: center;
-    background-color: $bdl-CountBadge-background;
+    background-color: $countBadgeBackground;
     border-radius: 16px;
     box-shadow: 0 1px 4px 0 rgba($black, .3);
     transform: scale(0);
